# Financial-News-Agent

./: .dockerignore  .gitignore  .replit  Dockerfile  main.py  my-first-app-491201-0b850627be23.json  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  requirements.txt
backend/: ai_service.py  database.py  email_service.py  main.py  requirements.txt  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  NewsCard.jsx  SentimentMeter.jsx  StepAnalysis.jsx
frontend/src/pages/: ArchivePage.jsx  NewsPage.jsx  SubscribePage.jsx  UnsubscribePage.jsx
