[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
uvicorn = "^0.42.0"
apscheduler = "^3.11.2"
pytz = "^2026.1.post1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
requests = "^2.33.0"
google-cloud-aiplatform = "^1.143.0"
fastapi = "^0.135.2"
python-multipart = "^0.0.22"
psycopg2-binary = "^2.9.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"